--- a/settings/project.json
+++ b/settings/project.json
@@ -31,11 +31,11 @@
     "3D Physics/Builtin"
   ],
   "last-module-event-record-time": 0,
-  "design-resolution-width": 960,
+  "design-resolution-width": 360,
   "design-resolution-height": 640,
-  "fit-width": false,
+  "fit-width": true,
   "fit-height": true,
-  "use-project-simulator-setting": true,
+  "use-project-simulator-setting": false,
   "simulator-orientation": false,
   "use-customize-simulator": true,
   "simulator-resolution": {
@@ -52,5 +52,6 @@
     "live": {
       "enable": false
     }
-  }
+  },
+  "start-scene": "current"
 }
