--- a/settings/project.json
+++ b/settings/project.json
@@ -28,19 +28,23 @@
     [
       false,
       true,
-      false
+      false,
+      true,
+      true
     ],
     [
       false,
       true,
-      false,
-      false
+      true,
+      true,
+      true,
+      true
     ],
     [
       true,
       true,
-      false,
-      false,
+      true,
+      true,
       false,
       null,
       true
@@ -49,7 +53,7 @@
       true,
       true,
       false,
-      false,
+      true,
       false,
       false
     ],
