--- a/settings/project.json
+++ b/settings/project.json
@@ -12,9 +12,9 @@
     [
       true,
       null,
-      null,
-      null,
       true,
+      false,
+      false,
       true
     ],
     [
@@ -26,11 +26,12 @@
       true
     ],
     [
-      false,
+      true,
       true,
       false,
       true,
-      true
+      true,
+      false
     ],
     [
       false,
@@ -41,12 +42,12 @@
       true
     ],
     [
-      true,
-      true,
-      true,
-      true,
       false,
-      null,
+      true,
+      true,
+      true,
+      true,
+      true,
       true
     ],
     [
@@ -54,7 +55,7 @@
       true,
       false,
       true,
-      false,
+      true,
       false
     ],
     [
