--- a/settings/project.json
+++ b/settings/project.json
@@ -14,8 +14,8 @@
       null,
       true,
       false,
-      false,
-      true
+      true,
+      false
     ],
     [
       false,
@@ -23,7 +23,7 @@
       true,
       true,
       true,
-      true
+      false
     ],
     [
       true,
@@ -42,7 +42,7 @@
       true
     ],
     [
-      false,
+      true,
       true,
       true,
       true,
@@ -51,8 +51,8 @@
       true
     ],
     [
-      true,
-      true,
+      false,
+      false,
       false,
       true,
       true,
@@ -93,5 +93,6 @@
     "live": {
       "enable": false
     }
-  }
+  },
+  "start-scene": "current"
 }
