--- a/project.json
+++ b/project.json
@@ -1,6 +1,7 @@
 {
   "engine": "cocos-creator-js",
   "packages": "packages",
-  "version": "2.3.1",
-  "id": "cbc889fb-d35f-4bac-a7fc-932ea824c657"
+  "version": "2.4.0",
+  "id": "cbc889fb-d35f-4bac-a7fc-932ea824c657",
+  "isNew": false
 }
