--- a/settings/project.json
+++ b/settings/project.json
@@ -72,7 +72,7 @@
     "3D Physics/Builtin",
     "SafeArea"
   ],
-  "last-module-event-record-time": 0,
+  "last-module-event-record-time": 1594287958273,
   "design-resolution-width": 360,
   "design-resolution-height": 640,
   "fit-width": true,
