尾巴非动作实现

--- a/settings/project.json
+++ b/settings/project.json
@@ -69,8 +69,37 @@
     ]
   ],
   "excluded-modules": [
+    "Dynamic Atlas",
+    "DragonBones",
+    "EditBox",
+    "Graphics",
+    "Geom Utils",
+    "Label Effect",
+    "Mask",
+    "Mesh",
+    "MotionStreak",
+    "Native Socket",
+    "Physics",
+    "PageView",
+    "PageViewIndicator",
+    "ParticleSystem",
+    "RichText",
+    "Renderer Texture",
+    "Slider",
+    "ScrollBar",
+    "ScrollView",
+    "Spine Skeleton",
+    "StudioComponent",
+    "Toggle",
+    "TiledMap",
+    "VideoPlayer",
+    "Widget",
+    "WebView",
+    "3D",
+    "3D Primitive",
+    "3D Physics/cannon.js",
     "3D Physics/Builtin",
-    "SafeArea"
+    "3D Particle"
   ],
   "last-module-event-record-time": 1594893069598,
   "design-resolution-width": 360,
